--- a/environment_ubuntu.yml
+++ b/environment_ubuntu.yml
@@ -1,4 +1,4 @@
-name: rlds_env
+name: rlds_env_2
 channels:
   - conda-forge
 dependencies:
@@ -15,7 +15,7 @@ dependencies:
   - ncurses=6.4=hcb278e6_0
   - openssl=1.1.1u=hd590300_0
   - pip=23.2.1=pyhd8ed1ab_0
-  - python=3.9.0=hffdb5ce_5_cpython
+  - python=3.10.0=hffdb5ce_5_cpython
   - readline=8.2=h8228510_1
   - setuptools=68.0.0=pyhd8ed1ab_0
   - sqlite=3.42.0=h2c6b66d_0
@@ -72,7 +72,7 @@ dependencies:
       - markdown==3.4.3
       - markupsafe==2.1.3
       - matplotlib==3.7.2
-      - numpy==1.24.3
+      - numpy==2.1.3
       - oauthlib==3.2.2
       - objsize==0.6.1
       - opt-einsum==3.3.0
